--- a/Problems/Removing/task.html
+++ b/Problems/Removing/task.html
@@ -1,5 +1,4 @@
-<b>Removing</b> <a class=right href="https://hyperskill.org/learn/step/6950">Open on JetBrains Academy</a>
-<br><br>
+<h2>Removing</h2>
 <html>
  <head></head>
  <body>
