--- a/Problems/Reverse input text/task.html
+++ b/Problems/Reverse input text/task.html
@@ -1,5 +1,4 @@
-<b>Reverse input text</b> <a class=right href="https://hyperskill.org/learn/step/9098">Open on JetBrains Academy</a>
-<br><br>
+<h2>Reverse input text</h2>
 <html>
  <head></head>
  <body>
